fixing white space wrap on lists

--- a/app/react/components/TextWithMentions/TextWithMentions.css
+++ b/app/react/components/TextWithMentions/TextWithMentions.css
@@ -11,6 +11,7 @@
 
 .root li {
   /*white-space: pre-wrap;*/
+  white-space: normal;
 }
 
 .root p {
